log/build_2025-11-18_03-24-27/uts/stderr.log
  File "/home/ubuntu/kelompok1/install/uts/lib/python3.12/site-packages/uts/uts.py", line 69
    navigator.startToPose(bjirrr))
                                 ^
SyntaxError: unmatched ')'

